<resources>
    <string name="app_name" translatable="false">Payment Explorer</string>
    <string name="label_app_version_no" translatable="false">v0.1</string>
    <string name="label_login">Login</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="label_setting">Settings</string>
    <string name="label_unknown">Unknown</string>
    <string name="label_off">off</string>
    <string name="other">Other</string>
    <string name="label_loading">Loading…</string>
    <string name="label_logcat" translatable="false">Logcat</string>
    <string name="label_info" translatable="false">Information</string>
    <string name="label_bottom_nav_tab1" translatable="false">tab1</string>
    <string name="label_bottom_nav_tab2" translatable="false">tab2</string>
    <string name="label_bottom_nav_tab3" translatable="false">tab3</string>
    <string name="label_bottom_nav_tab4" translatable="false">tab4</string>
    <string name="label_activity_test" translatable="false">TestActivity</string>
    <string name="label_fragment_test" translatable="false">TestFragment</string>
    <string name="label_fragment_home" translatable="false">HomeFragment</string>
    <string name="label_fragment_more" translatable="false">MoreFragment</string>
    <string name="label_remember_me">Remember me</string>
    <string name="label_logout">Confirm logout?</string>
    <string name="label_button_test">Test Button</string>
    <string name="button_filter">Filter</string>
    <string name="button_back">Back</string>
    <string name="button_exit">Exit</string>
    <string name="button_ok">OK</string>
    <string name="button_print">Print</string>
    <string name="button_qr_receipt">QR</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_send">Send</string>
    <string name="button_submit">Submit</string>
    <string name="button_share">Share</string>
    <string name="button_update_order">Update order</string>
    <string name="label_button_test_1">Test Button 1</string>
    <string name="label_button_test_2">Test Button 2</string>
    <string name="label_button_test_3">Test Button 3</string>
    <string name="label_button_test_4">Test Button 4</string>
    <string name="label_button_test_5">Test Button 5</string>
    <string name="label_button_test_6">Test Button 6</string>
    <string name="label_button_test_7">Test Button 7</string>
    <string name="label_button_test_8">Test Button 8</string>
    <string name="label_slogan">Slogan</string>
    <string name="label_title">Title</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_remove">Remove</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_request">Request</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_register">Register</string>
    <string name="button_start_new_sale">Start new sale</string>
    <string name="transaction_status_approved">Approved</string>
    <string name="transaction_status_completed">Completed</string>
    <string name="transaction_status_declined">Declined</string>
    <string name="transaction_status_error">Error</string>
    <string name="transaction_status_offline">Approved (Offline)</string>
    <string name="transaction_status_processing">Processing</string>
    <string name="transaction_status_reverse">Reversed</string>
    <string name="transaction_status_refunded">Refunded</string>
    <string name="transaction_status_voided">Voided</string>
    <string name="transaction_type_auth">Auth</string>
    <string name="transaction_type_capture">Capture</string>
    <string name="transaction_type_offline">Offline</string>
    <string name="transaction_type_refund">Refund</string>
    <string name="transaction_type_sale">Sale</string>
    <string name="transaction_type_void">Void</string>
    <string name="label_decode_image_fail">Fail to decode image</string>
    <string name="label_transaction_error_idle_timeout">Idle timeout</string>
    <string name="notification_channel_id" translatable="false">notification_channel_id</string>
    <string name="account_type" translatable="false">Spectra Dummy</string>
    <string name="label_rationale_location">"Allow location permission to perform transaction"</string>
    <string name="label_rationale_bluetooth">"Allow device location permission to discover bluetooth device"</string>
    <string name="label_rationale_phone_state">"Allow read phone state permission to get device’s serial number"</string>
    <string name="label_rationale_camera">"Allow camera permission to take picture, barcode or QR code"</string>
    <string name="label_rationale_file">"Allow files and media permission to save images to your device"</string>
    <string name="label_rationale_file_read">"Allow read files and media permission to read images from your device"</string>
    <string name="label_rationale_file_manage">"Allow manage files and media permission from device's external storage"</string>
    <string name="label_rationale_stats">"Allow permission to perform transaction"</string>
    <string name="label_rationale_notification">"Allow device notification permission to push notification to your device"</string>
    <string name="label_checking_basic_config">Checking basic config…</string>
    <string name="label_powered_by_spectra">Powered by Spectra Technologies</string>
    <string name="label_e_donation">E - Donation</string>
    <string name="label_e_donation_option" translatable="false">$ %1$s</string>
    <string name="label_e_donation_option_1">Donate Option 1</string>
    <string name="label_e_donation_option_2">Donate Option 2</string>
    <string name="label_e_donation_option_3">Donate Option 3</string>
    <string name="label_e_donation_option_4">Donate Option 4</string>
    <string name="default_e_donation_option_1" translatable="false">$ 1</string>
    <string name="default_e_donation_option_2" translatable="false">$ 5</string>
    <string name="default_e_donation_option_3" translatable="false">$ 10</string>
    <string name="default_e_donation_option_4" translatable="false">$ 20</string>
    <string name="label_e_donation_option_custom">Custom</string>
    <string name="label_total_amount">Total amount</string>
    <string name="label_check_result">Check result</string>
    <string name="label_input_email">Please enter your email</string>
    <string name="label_input_hint">Enter here</string>
    <string name="label_input_phone">Please enter your phone no.</string>
    <string name="label_input_customer_info">Please fill in customer info</string>
    <string name="label_present_qr">Present QR</string>
    <string name="label_scan_qr_desc">Align QR code within the frame to scan</string>
    <string name="label_scan_code_get_receipt">Scan below QR to get receipt</string>
    <string name="label_scan_code_get_pay_link">Scan below QR to get pay link</string>
    <string name="label_sending">Sending…</string>
    <string name="label_sent">Receipt sent!</string>
    <string name="label_sms_receipt">SMS</string>
    <string name="var_approval">Approval: %1$s</string>
    <string name="var_change">Change: %1$s</string>
    <string name="var_multiplication_sign" translatable="false">✕ %1$d</string>
    <string name="var_trace">Trace: %1$s</string>
    <string name="label_need_receipt">Need receipt?</string>
    <string name="button_scan_qr">Scan QR</string>
    <string name="label_invalid_qr">Invalid QR code</string>
    <string name="label_null_qr_desc">QR code cannot be null</string>
    <string name="label_qr_choose_payment_method">Choose one of the payment scheme</string>
    <string name="label_scan_present_qr_to_pay">Show below QR to customer to scan</string>
    <string name="label_scan_to_pay">Scan to pay</string>
    <string name="label_save_qr_location_success">QR code saved to：</string>
    <string name="label_save_file_failed">Save file failed</string>
    <string name="var_last_try_passcode_warning">%1$s remaining passcode attempts before locked for %2$s minutes.</string>
    <string name="label_passcode_updated">Passcode updated</string>
    <string name="var_qr_valid_until">QR valid until: %s</string>
    <string name="label_disclaimer_standard">I agree to pay the above total amount according to card issuer agreement.</string>
    <string name="label_sign_here">Please sign here</string>
    <string name="transaction_fail_error_message">Transaction aborted</string>
    <string name="error_result_customer_abort">Transaction aborted</string>
    <string name="error_result_operation_timeout">Idle timeout</string>
    <string name="error_result_nfc_disabled">NFC disabled</string>
    <string name="error_result_requirement_not_meet">Device requirement not meet</string>
    <string name="error_result_pending_reversal_upload_fail">Pending reversal upload fail</string>
    <string name="error_result_txn_amount_exceed_app_limit">Amount exceed application limit</string>
    <string name="error_result_please_retry">Error issue. Please Click Retry Button</string>
    <string name="payment_method_alipay">Alipay</string>
    <string name="payment_method_amex">American Express</string>
    <string name="payment_method_cash">Cash</string>
    <string name="payment_method_cup">UnionPay</string>
    <string name="payment_method_fps">FPS</string>
    <string name="payment_method_jcb" translatable="false">JCB</string>
    <string name="payment_method_master" translatable="false">Mastercard</string>
    <string name="payment_method_octopus">Octopus</string>
    <string name="payment_method_diners" translatable="false">Diners</string>
    <string name="payment_method_discover" translatable="false">Discover</string>
    <string name="payment_method_eps">EPS</string>
    <string name="payment_method_zelle" translatable="false">Zelle</string>
    <string name="payment_method_maestro" translatable="false">Maestro</string>
    <string name="payment_method_easycard">EasyCard</string>
    <string name="payment_method_visa" translatable="false">Visa</string>
    <string name="payment_method_wechat">WeChat Pay</string>
    <string name="payment_method_upi_qr">UnionPay QR</string>
    <string name="payment_method_payme" translatable="false">PayMe</string>
    <string name="payment_method_yuu" translatable="false">Yuu</string>
    <string name="entry_mode_contactless">Contactless</string>
    <string name="entry_mode_chip">Chip</string>
    <string name="entry_mode_magstripe">Swipe</string>
    <string name="entry_mode_manual">Manual</string>
    <string name="entry_mode_fallback">Fallback</string>
    <string name="entry_mode_qr_present">Merchant QR Present</string>
    <string name="entry_mode_qr_scan">Customer QR Present</string>
    <string name="entry_mode_ecommerce">Ecommerce</string>
    <string name="label_abort">Abort</string>
    <string name="emv_label_tap">"Tap"</string>
    <string name="label_setting_log_font_size" translatable="false">Log font setting</string>
    <string name="label_setting_default_port" translatable="false">Default port</string>
    <string name="label_font_size" translatable="false">Font Size</string>
    <string name="label_log_font_size_min" translatable="false">10sp</string>
    <string name="label_log_font_size_max" translatable="false">20sp</string>
    <string name="label_port" translatable="false">Port</string>
    <string name="label_redirect_destination" translatable="false">Redirect to</string>
    <string name="label_server" translatable="false">Server</string>
    <string name="label_start" translatable="false">Start</string>
    <string name="label_proxy" translatable="false">Proxy</string>
    <string name="label_inspect_moder" translatable="false">Inspect mode</string>
</resources>